fixes and mps starts now